# fastapi-template

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/api/: __main__.py  main_factory.py
app/api/config/models/: api.py  main.py
app/api/config/parser/: api.py  main.py
app/api/depends/: __init__.py  auth.py  db.py  jwt.py
app/api/middlewares/: __init__.py
app/api/middlewares/metrics/: __init__.py  labels.py  middleware.py  utils.py
app/api/models/: __init__.py  auth.py  user.py
app/api/routes/: __init__.py  auth.py  default.py  exceptions.py  healthcheck.py  user.py
app/api/services/: auth.py  user.py
app/common/: __init__.py
app/common/config/: __init__.py
app/common/config/models/: __init__.py  main.py  paths.py
app/common/config/parser/: config_file_reader.py  logging_config.py  main.py  paths.py
app/core/models/dto/: __init__.py  user.py
app/core/utils/: exceptions.py
app/infrastructure/db/: factory.py
app/infrastructure/db/config/models/: db.py
app/infrastructure/db/config/parser/: db.py
app/infrastructure/db/dao/: holder.py
app/infrastructure/db/dao/rdb/: __init__.py  base.py  user.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/models/: base.py  user.py
config/: config.yml  logging.yml  prod_config.yml
grafana/dashboards/: fastapi-metrics.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
vector/: vector.toml
(+1 files in other folders)
